find_package(Chemkit)
include_directories(${CHEMKIT_INCLUDE_DIRS})

add_subdirectory(chemkit)
add_subdirectory(graphics)
add_subdirectory(io)
add_subdirectory(md)
add_subdirectory(gui)
add_subdirectory(plugins)
add_subdirectory(validation)
add_subdirectory(roundtrip)
add_subdirectory(apps)
add_subdirectory(bindings)
